# chatv2-spike

./: .gitignore  README.md  app.py  cdk.json  invoke.py  pyproject.toml  requirements_dev.txt  viewer.py
agents/orchestrator/: Dockerfile  client.py  requirements.txt
agents/orchestrator/tests/: test_prompt.py
agents/orchestrator/tests/test_data/: prompt_data.py
agents/researcher/: Dockerfile  requirements.txt  server.py
agents/researcher/tests/test_data/: prompt_data.py
agents/writer/: Dockerfile  client.py  requirements.txt
evaluation_framework/: prompt_evaluation.py  types.py  utils.py
evaluation_framework/tests/: test_prompt_evaluation.py
infra/: retrieval_stack.py  stack.py
lambdas/retrieval/: handler.py
tests/: test_invoke.py  test_retrieval_stack.py
tools/search_gov_uk/: handler.py  requirements.txt  test_handler.py  test_tool.py  tool.py
tools/semantic_search/: tool.py
